--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,9 @@ const { title } = Astro.props;
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500;700&family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -25,5 +28,12 @@ const { title } = Astro.props;
 		font-family: system-ui, sans-serif;
 		background: #d2d4d3;
 		background-size: 224px;
+	}
+	header{
+		font-family: 'Be Vietnam Pro', sans-serif;
+	}
+	*{
+		margin:0;
+		padding: 0;
 	}
 </style>
