--- a/src/components/StandardArticle.astro
+++ b/src/components/StandardArticle.astro
@@ -25,6 +25,7 @@ const style = `grid-column: span ${col}; grid-row: span ${row};`
 </article>
 <style lang="scss">
   article{
+    overflow: hidden;
     background-color: #334a7963;
     border: 1px solid #62769F;
     border-radius: 1.25rem;
