--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500;700&family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500;700&family=Monstserrat:wght@100;400;900&display=swap" rel="stylesheet">
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -33,6 +33,7 @@ const { title } = Astro.props;
 		font-family: 'Be Vietnam Pro', sans-serif;
 	}
 	*{
+		font-family: 'Montserrat', sans-serif;
 		margin:0;
 		padding: 0;
 	}
