--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import MainSection from '../layouts/MainSection.astro';
 	<main>
 		<Hero/>
 		<main>
-			<MainSection>
+			<MainSection gradient='radial-gradient(circle, rgba(51,74,121,1) 0%, rgba(0,0,0,1) 100%)'>
 				<AboutMe/>
 			</MainSection>
 		</main>
