--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -5,6 +5,10 @@ import me from '../assets/aboutMe.png'
 import { Image } from "astro:assets";
 import Github from "./icons/Github"
 import Linkedin from "./icons/Linkedin";
+import Controller from "./icons/Controller";
+import FatCap from "./icons/FatCap";
+import Gpu from "./icons/Gpu";
+import Camera from "./icons/Camera";
 
 ---
 <StandardArticle span={{col:2}} >
@@ -37,6 +41,39 @@ import Linkedin from "./icons/Linkedin";
     <h2>GitHub</h2>
   </a>
 </StandardArticle>
+<div class="hobbies">
+  <StandardArticle isBtn isSquare isCircle>
+    <a href="#">
+      <Controller size="8rem" client:load />
+      <span>Videojuegos</span>
+    </a>
+  </StandardArticle>
+  <StandardArticle isBtn isSquare isCircle>
+    <a href="#">
+      <FatCap size="8rem" client:load />
+      <span>Arte urbano</span>
+    </a>
+  </StandardArticle>
+  <StandardArticle isBtn isSquare isCircle>
+    <a href="#">
+      <Gpu size="8rem" client:load />
+      <span>Hardware</span>
+    </a>
+  </StandardArticle>
+  <StandardArticle isBtn isSquare isCircle>
+    <a href="#">
+      <Camera size="8rem" client:load />
+      <span>Fotografia</span>
+    </a>
+  </StandardArticle>
+</div>
+<StandardArticle span={{col:2,row:2}} >
+
+
+  <!-- TODO: Formación -->
+
+
+</StandardArticle>
 <StandardArticle isBtn isSquare>
   <a href="https://github.com/MrSetOne" target="_blank" class="linkedIn">
     <Linkedin client:load />
@@ -44,12 +81,6 @@ import Linkedin from "./icons/Linkedin";
     <h2>Linkedin</h2>
   </a>
 </StandardArticle>
-
-
-<!-- TODO: BORRAME POR FAVOR -->
-<div style="width:100%;height:50rem;grid-column: span 3;" >
-
-</div>
 
 <style lang="scss">
 
@@ -95,6 +126,24 @@ import Linkedin from "./icons/Linkedin";
     h2{
       color:#FCA311;
       font-size: 2.25rem;
+    }
+  }
+
+  .hobbies{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    gap:1rem;
+    a{
+      color: white;
+      text-decoration: none;
+      display: flex;
+      gap: .5rem;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100%; 
+      font-weight:700 ;
     }
   }
 
