--- a/src/components/StandardArticle.astro
+++ b/src/components/StandardArticle.astro
@@ -7,6 +7,7 @@ interface Props{
   }
   isBtn?: boolean,
   isSquare?: boolean,
+  isCircle?: boolean,
 }
 
 const defaultSpan = {
@@ -14,13 +15,14 @@ const defaultSpan = {
   row: 1,
 }
 
-const { span=defaultSpan, isBtn=false, isSquare=false } = Astro.props;
+const { span=defaultSpan, isBtn=false, isSquare=false , isCircle=false} = Astro.props;
 const { col=1, row=1 } = span;
 
 const gridStyle = `grid-column: span ${col}; grid-row: span ${row};`
 const paddingStyle = !isBtn ? 'padding: 1.9rem;' : '';
 const squareStyle = isSquare ? 'aspect-ratio:1/1;' : '';
-const style = gridStyle + paddingStyle + squareStyle
+const circleStyle = isCircle ? 'border-radius: 50%;' : 'border-radius: 1.25rem;';
+const style = gridStyle + paddingStyle + squareStyle + circleStyle;
 
 ---
 
@@ -32,7 +34,6 @@ const style = gridStyle + paddingStyle + squareStyle
     overflow: hidden;
     background-color: #334a7963;
     border: 1px solid #62769F;
-    border-radius: 1.25rem;
     color: white;
     backdrop-filter: blur(4px);
   }
