--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -3,6 +3,7 @@ import Chips from "./Chips.astro";
 import StandardArticle from "./StandardArticle.astro";
 import me from '../assets/aboutMe.png'
 import { Image } from "astro:assets";
+import Training from "./Training.astro";
 import Github from "./icons/Github"
 import Linkedin from "./icons/Linkedin";
 import Controller from "./icons/Controller";
@@ -68,11 +69,10 @@ import Camera from "./icons/Camera";
   </StandardArticle>
 </div>
 <StandardArticle span={{col:2,row:2}} >
-
-
-  <!-- TODO: Formación -->
-
-
+  <div class="training">
+    <h2>Formación</h2>
+    <Training/>
+  </div>
 </StandardArticle>
 <StandardArticle isBtn isSquare>
   <a href="https://github.com/MrSetOne" target="_blank" class="linkedIn">
@@ -144,6 +144,23 @@ import Camera from "./icons/Camera";
       align-items: center;
       height: 100%; 
       font-weight:700 ;
+    }
+  }
+
+  .training{
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 0rem 2rem;
+    h2{
+      font-size: 4rem;
+      padding: 1.2rem .6rem;
+      border: .7rem solid white;
+      text-transform: uppercase;
+      color:#FCA311;
     }
   }
 
