--- a/src/components/StandardArticle.astro
+++ b/src/components/StandardArticle.astro
@@ -36,6 +36,8 @@ const style = gridStyle + paddingStyle + squareStyle + circleStyle;
     border: 1px solid #62769F;
     color: white;
     backdrop-filter: blur(4px);
+    box-shadow: #00000070 0px 5px 13px 0px
+    ;
   }
 </style>
 
