--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,8 +15,9 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500;700&family=Monstserrat:wght@100;400;900&display=swap" rel="stylesheet">
-		<meta name="generator" content={Astro.generator} />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@500;700&family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
 	<body>
@@ -29,8 +30,8 @@ const { title } = Astro.props;
 		background: #d2d4d3;
 		background-size: 224px;
 	}
-	header{
-		font-family: 'Be Vietnam Pro', sans-serif;
+	header *{
+		font-family: 'Be Vietnam Pro', sans-serif !important;
 	}
 	*{
 		font-family: 'Montserrat', sans-serif;
