--- a/src/layouts/MainSection.astro
+++ b/src/layouts/MainSection.astro
@@ -19,6 +19,7 @@ const sectionBg = gradient ? `background:${gradient};` : '';
 	section{
     background-color: black;
     width: 100%;
+    padding: 4rem 0;
     >div{
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
