--- a/src/layouts/MainSection.astro
+++ b/src/layouts/MainSection.astro
@@ -23,6 +23,7 @@ const sectionBg = gradient ? `background:${gradient};` : '';
     >div{
       display: grid;
       grid-template-columns: 1fr 1fr 1fr;
+      grid-auto-rows: minmax(26rem, auto);
       gap:1rem;
       grid-auto-flow: dense;
       width: min(90vw, 80rem);
