--- a/src/components/StandardArticle.astro
+++ b/src/components/StandardArticle.astro
@@ -26,20 +26,17 @@ const style = gridStyle + paddingStyle + squareStyle + circleStyle;
 
 ---
 
-<article style={style} >
+<article style={style} class="mainArticle" >
   <slot/>
 </article>
 <style lang="scss">
-  article{
+  .mainArticle{
     overflow: hidden;
     background-color: #334a7963;
     border: 1px solid #62769F;
     color: white;
     backdrop-filter: blur(4px);
-    box-shadow: #00000070 0px 5px 13px 0px
-    ;
+    box-shadow: #00000070 0px 5px 13px 0px;
+    transition: all 1s;
   }
 </style>
-
-
-
