contact without form

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import AboutMe from '../components/AboutMe.astro';
 import MainSection from '../layouts/MainSection.astro';
 import Experiencie from '../components/Experiencie/Experiencie';
 import Experiences from '../components/Experiences.astro';
+import Contact from '../components/Contact.astro';
 
 ---
 
@@ -19,6 +20,9 @@ import Experiences from '../components/Experiences.astro';
 			<Experiencie client:load />
 			<MainSection gradient='linear-gradient(0deg, rgba(106,133,188,1) 0%, rgba(51,74,121,1) 38%, rgba(0,0,0,1) 100%);'>
 				<Experiences/>
+				<Contact>
+					
+				</Contact>
 			</MainSection>
 		</main>
 	</main>
