--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -30,6 +30,7 @@ import Mail from "./icons/Mail";
 
 <style lang="scss">
   .contact{
+    margin-top: 4rem;
     box-shadow: #00000070 0px 5px 13px 0px;
     overflow: hidden;
     border-radius: 1.25rem;
@@ -37,11 +38,13 @@ import Mail from "./icons/Mail";
     display: flex;
     grid-column: span 3;
     .contact__main{
-      width: 60rem;
+      padding: 10rem;
+      width: calc(40rem);
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      gap: 2rem;
       >h2{
         font-size: 4rem;
         padding: 1.2rem .6rem;
