--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,4 +50,4 @@ import ContactForm from '../components/Form/ContactForm';
 		article.onmouseleave = e => handleOnMouseLeave(e);
 	});
 
-</script>../components/Form/ContactForm
+</script>
