--- a/src/components/Form/ContactForm.scss
+++ b/src/components/Form/ContactForm.scss
@@ -1,30 +1,63 @@
 .form__container{
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 1rem;
   width: 100%;
-  >textarea{
-    grid-column: span 2;
+  position: relative;
+  form{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+    width: 100%;
+    >div{
+      display: flex;
+      justify-content: flex-end;
+    }
+    >.form__btns{
+      grid-column: span 2;
+      display: flex;
+      justify-content: flex-end;
+      gap:1rem;
+      >button{
+        background-color: #fca311;
+        font-size: 1rem;
+        padding: .5rem 1rem;
+        border-radius: .5rem;
+        color: white;
+        font-weight: 700;
+        cursor: pointer;
+        border: none;
+      }
+      >.form__btns--cv{
+        background-color: transparent;
+        border: #fca311 1px solid;
+        color: #fca311;
+      }
+    }
   }
-  >input, >textarea{
-    padding: .5rem;
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid #B1B3B6;
+  .form__end{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    width: 100%;
+    height: 100%;
     color: white;
-  }
-  >textarea{
-    background-color: #192132;
-    resize: vertical;
-    font-family: 'Montserrat', sans-serif;
-    border-radius: .5rem;
-    border-bottom: none;
-  }
-  >div{
     display: flex;
-    justify-content: flex-end;
-  }
-  input:focus-visible, textarea:focus-visible{
-    outline:none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    >svg{
+      margin-bottom: 1rem;
+    }
+    >.form__btns--cv{
+      margin-top: 1rem;
+      background-color: transparent;
+      border: #fca311 1px solid;
+      color: #fca311;
+      font-size: 1rem;
+      padding: .5rem 1rem;
+      border-radius: .5rem;
+      font-weight: 700;
+      cursor: pointer;
+    }
   }
 }
