--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,7 +19,6 @@ import me from '../assets/meHero.png'
     </h1>
     <HeroTitles client:visible />
   </div>
-  <!-- <div class="hero__deco" /> -->
 	<svg
 		class="hero__deco"
 		xmlns="http://www.w3.org/2000/svg"
@@ -34,7 +33,7 @@ import me from '../assets/meHero.png'
 
 <style lang="scss">
   header{
-		height: 100vh;
+		height: 80vh;
 		position: relative;
 		overflow: hidden;
 		background-color: #d2d4d3;
@@ -45,8 +44,9 @@ import me from '../assets/meHero.png'
 			height: 100%;
 			display: flex;
 			flex-direction: column;
-			justify-content: center;
+			justify-content: flex-start;
 			line-height: .9;
+			padding-top: 16rem;
 			padding-left: 16rem;
 			width: fit-content;
 
@@ -126,7 +126,7 @@ import me from '../assets/meHero.png'
 			}
 			img{
 				width: auto;
-				height: calc(100vh - 4rem);
+				height: calc(80vh - 4rem);
 			}
 		}
 	}
