--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -35,7 +35,7 @@ import Camera from "./icons/Camera";
     <Image src={me} alt="Michael Lara Sánchez" class="aboutMe__image" width={500} />
   </div>
 </StandardArticle>
-<StandardArticle isBtn isSquare>
+<StandardArticle isBtn>
   <a href="https://github.com/MrSetOne" target="_blank" class="gitHub">
     <Github client:load />
     <span>Visita mi perfil de</span>
@@ -74,7 +74,7 @@ import Camera from "./icons/Camera";
     <Training/>
   </div>
 </StandardArticle>
-<StandardArticle isBtn isSquare>
+<StandardArticle isBtn>
   <a href="https://github.com/MrSetOne" target="_blank" class="linkedIn">
     <Linkedin client:load />
     <span>Conecta conmigo en</span>
