--- a/src/layouts/MainSection.astro
+++ b/src/layouts/MainSection.astro
@@ -30,4 +30,12 @@ const sectionBg = gradient ? `background:${gradient};` : '';
       margin: 0 auto;
     }
 	}
+
+  @media (max-width: 1100px){
+    section{
+      >div{
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+  }
 </style>
