--- a/src/components/Training.astro
+++ b/src/components/Training.astro
@@ -92,6 +92,7 @@ import Dot from "./icons/Dot.astro";
           display: flex;
           font-weight: 700;
           .dotItem{
+            flex: none;
             width: 1rem;
             height: 1rem;
             border-radius: 50%;
