--- a/src/layouts/MainSection.astro
+++ b/src/layouts/MainSection.astro
@@ -35,6 +35,9 @@ const sectionBg = gradient ? `background:${gradient};` : '';
     section{
       >div{
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: min-content;
+        grid-auto-rows: initial;
+        width: 96vw;
       }
     }
   }
