--- a/src/layouts/MainSection.astro
+++ b/src/layouts/MainSection.astro
@@ -37,7 +37,7 @@ const sectionBg = gradient ? `background:${gradient};` : '';
         grid-template-columns: 1fr 1fr;
         grid-template-rows: min-content;
         grid-auto-rows: initial;
-        width: 96vw;
+        width: calc(100% - 2rem);
       }
     }
   }
