--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -166,6 +166,15 @@ import Camera from "./icons/Camera";
         padding: 1rem;
         height: auto;
       }
+      @media screen and (max-width: 500px){
+        span{
+          display: none;
+        }
+        h2{
+          color: white;
+          margin-top: 1rem;
+        }
+      }
     }
     span{
       margin-top: 1rem;
