--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -37,6 +37,9 @@ import Mail from "./icons/Mail";
     background-color: #0d121d;
     display: flex;
     grid-column: span 3;
+    @media screen and (max-width: 1100px) {
+      grid-column: span 2;
+    }
     .contact__main{
       padding: 10rem;
       width: calc(40rem);
