--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -40,20 +40,39 @@ import Mail from "./icons/Mail";
     @media screen and (max-width: 1100px) {
       grid-column: span 2;
     }
+
+    @media screen and (max-width: 1000px) {
+      flex-direction: column-reverse;
+    }
+      
+    
+
+
+
     .contact__main{
+      box-sizing: border-box;
       padding: 10rem;
-      width: calc(40rem);
+      width: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       gap: 2rem;
+      @media screen and (max-width: 1000px) {
+        padding:  5rem 0;
+        width: min(90%, 40rem);
+        margin: 0 auto;
+      }
       >h2{
-        font-size: 4rem;
+        font-size: min(4rem, 9vw);
         padding: 1.2rem .6rem;
         border: .7rem solid white;
         text-transform: uppercase;
         color:#FCA311;
+        @media screen and (max-width:400px) {
+          border: none;
+          color: white;
+        }
       }
       >.contact__others{
         width: 100%;
@@ -69,11 +88,19 @@ import Mail from "./icons/Mail";
             flex: 1;
             height: .1rem;
             background-color: white;
+            @media screen and (max-width: 500px) {
+              display: none;
+            }
           }
           >span{
             font-size: 1rem;
             color: white;
             padding: 0 1rem;
+            @media screen and (max-width: 500px) {
+              display: block;
+              width: 100%;
+              text-align: center;
+            }
           }
         }
         .contact__icons{
@@ -81,18 +108,29 @@ import Mail from "./icons/Mail";
           justify-content: center;
           align-items: center;
           gap:5rem;
+          @media screen and (max-width: 500px) {
+            width: min(100%, 16rem);
+            gap:0;
+            justify-content: space-between;
+          }
         }
       }
     }
     .contact__aside{
       box-shadow: inset 0px 0px 55px 0px rgba(0,0,0,0.75);
       z-index: 3;
-      flex: 1;
+      // flex: 1;
+      width: 33rem;
       position: relative;
       overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
+      @media screen and (max-width: 1000px) {
+        width: 100%;
+        height: min-content;
+        padding: 1rem 0;
+      }
       >img{
         position: absolute;
         width: 150%;
@@ -110,7 +148,7 @@ import Mail from "./icons/Mail";
         color: white;
         z-index: 2;
         font-weight: 800;
-        font-size: 10rem;
+        font-size: clamp(7rem, 12vw, 10rem);
       }
     }
   }
